# fake_clients

./: 404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: CI.yml
data/: rand_df.csv
docs/: index.md
search/: search_index.json
src/: fakedatager.py
tests/: test_funcional.py
